Done a heap of work on the Plugin

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,3 +24,5 @@ commands:
     aliases: [ color, colour ]
   statistics:
     aliases: [ stats, info ]
+  alts:
+    aliases: [ checkalts, searchalts ]
