Done a heap of work on the Plugin

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -26,3 +26,9 @@ commands:
     aliases: [ stats, info ]
   alts:
     aliases: [ checkalts, searchalts ]
+  observer:
+    aliases: [ obs ]
+  explosionheal:
+    aliases: [ tntheal, creeperheal ]
+  tpa:
+  tpaccept:
